--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
   <!-- Surprise Screen -->
   <div class="screen screen1" id="screen1">
     <h1>Hiii Jaanu💌</h1>
-    <button class="reveal-btn" onclick="showSurprise()">Kiss me Beb 🎁</button>
+    <button class="reveal-btn" onclick="showSurprise()">Good beb 🎁</button>
   </div>
 
   <!-- Birthday Surprise -->
