--- a/index.html
+++ b/index.html
@@ -150,22 +150,18 @@
 
   <!-- Surprise Screen -->
   <div class="screen screen1" id="screen1">
-    <h1>Hiii Jaanu💌</h1>
-    <button class="reveal-btn" onclick="showSurprise()">nhi yrr jaanu 🎁</button>
+    <h1><b>Bachcha 😘</b></h1>
+    <button class="reveal-btn" onclick="showSurprise()">27-5-25 SBH</button>
   </div>
 
   <!-- Birthday Surprise -->
   <div class="screen screen2" id="screen2">
-    <h1>Happy Birthday Mera Bachcha 💖</h1>
+    <h1>Sweetest My Love 💖</h1>
     <div class="message">
      <i> To my sweetest <b>Bittu</b>,</i><br><br>
-     Yor are most expensive for me, I know I hurt you allot but you are one  thats just imagination give me my life aim.
-     I cannot say I will never hurt you but I can say I will never leave you. I love you more than anything in this world.
-     I miss you soo much, I feel lonly without you.
-<br>
-     <i><b>Happy Birthday mera sabkuch </b></i><br>
-      May this birthday be the start of your happiest and most magical year.<br><br>
-      Forever yours,<br><b>$aurabh 💝</b>
+     i miss you so much. You are the sunshine in my life. 
+     
+    Forever yours,<br><b>$aurabh 💝</b>
     </div>
   </div>
 
