--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Happy Birthday Anjali 🎂</title>
+  <title>MY lOVE aNJALI</title>
   <link href="https://i.ibb.co/5Xk1q8zc/3.jpg" type="image/jpeg"  rel="icon">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Poppins:wght@300;500&display=swap" rel="stylesheet">
@@ -188,8 +188,8 @@
 
 
       const music = document.getElementById("music");
-  music.src = "https://www.youtube.com/embed/_z-1fTlSDF0?start=5&autoplay=1&loop=1&controls=0&mute=0&playlist=_z-1fTlSDF0";
-  music.style.display = "none"; // optional, keeps it hidden
+  //music.src = "https://www.youtube.com/embed/_z-1fTlSDF0?start=5&autoplay=1&loop=1&controls=0&mute=0&playlist=_z-1fTlSDF0";
+  //music.style.display = "none"; // optional, keeps it hidden
 
     }
 
