--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>MY lOVE aNJALI</title>
+  <title>MY LOVE ANJALI</title>
   <link href="https://i.ibb.co/5Xk1q8zc/3.jpg" type="image/jpeg"  rel="icon">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Poppins:wght@300;500&display=swap" rel="stylesheet">
